# lam

./: .gitignore  Cargo.toml  README.md  SPEC.md  SPECIFICATION.md  package.json  prolog.rs  tarpaulin-report.html
.github/workflows/: ci.yml
benches/: machine_bench.rs
coverage/: index.xml  report.html
docs/: GRAMMAR.md  all_source.rs
examples/: basic_assignment.lam  basic_assignment.pl  basic_unification.lam  basic_unification.pl  complex.lam  family.lam  hello.lam  hello_world.lam  hello_world.pl  math.lam  path.lam
examples/lam/: hello_world.lam  variable_binding.lam
scripts/: generate-badge.js
src/: arithmetic.rs  assembler.rs  lambda.rs  lib.rs  machine.rs  main.rs  parser.rs  term.rs  unification.rs  union_find.rs
src/prolog/: ast.rs  (+4 more)
tests/: test_arithmetic.rs  test_backtracking.rs  test_backtracking_constants.rs  test_backtracking_variables.rs  test_benchmark.rs  test_build_compound.rs  test_builtins.rs  test_core.rs  test_cut.rs  test_dynamic_clause_management.rs  test_environment.rs  test_eq_builtin.rs  test_error_conditions.rs  test_get_structure.rs  test_higher_order.rs  test_index_table.rs  test_indexed_call.rs  test_instruction.rs  test_instruction_interpreter.rs  test_instruction_parser_errors.rs  test_instruction_parser_extra.rs  test_lambda.rs  test_machine.rs  test_main.rs  test_nqueens.rs  test_path_inference.rs  test_ping.rs  test_prolog_ast.rs  test_prolog_interpreter.rs  test_prolog_parser.rs  test_tail_call.rs  test_term.rs  test_term_display.rs  test_unification.rs  test_unification_performance.rs  test_union_find.rs  unification.rs
(+54 files in other folders)
