[package]
name = "lam"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
pest = "2.7.15"
pest_derive = "2.7.15"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "machine_bench"
harness = false

[[bin]]
name = "lam"
path = "src/languages/lam.rs"

